--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>news</title>
-        <link rel="stylesheet" href="/index.css" />
+        <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
 
@@ -60,6 +60,6 @@
                 <h2 class="copyRights"> Copy rights reserved by inshortsNews 2025</h2>
             </div>
         </footer>
-        <script src="/index.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
